# QtExceptions

./: CMakeLists.txt  README.md
.github/workflows/: mac.yml  ubuntu.yml  ubuntu_ci.yml  windows.yml  windows_ci.yml
include/QtExceptions/: db_error.hpp  qt_exceptions.hpp  runtime_error.hpp
src/: db_error.cpp  runtime_error.cpp
test/: CMakeLists.txt
test/include/: db_error.hpp  run_time_error_test.hpp
test/src/: db_error.cpp  main.cpp  run_time_error.cpp  run_time_error_test.cpp
